DIAGNOSTICO. Se levanta las observaciones 1. PARTE 02 - 03.

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
@@ -102,7 +102,7 @@
     ],
     "lyrDiagnosis": [
         { 
-            "name": "Información CENEPRED",
+            "name": "PLANES",
             "id": "informacionCENEPRED",
             "srv": [
                 { 
@@ -155,7 +155,7 @@
             ]
         },
         { 
-            "name": "Cartografía Riesgos",
+            "name": "RIESGOS",
             "id": "cartografiaRiesgos",
             "srv": [
                 {
@@ -232,7 +232,7 @@
             ]
         },
         {
-            "name": "Cartografía de Peligros",
+            "name": "PELIGROS",
             "id": "cartografiaPeligros",
             "srv": [
                 {
