--- a/CENEPRED/Avance_03/json/config.json
+++ b/CENEPRED/Avance_03/json/config.json
@@ -112,7 +112,7 @@
     ],
     "lyrDiagnosis" : [
         { 
-            "name": "INFORMACIÓN CENEPRED",
+            "name": "PLANES",
             "srv": [
                 { 
                     "default": "active",
@@ -192,7 +192,8 @@
                                             "afirmacion": "seleccionado <strong>CUENTA</strong> con su <strong>Plan de Prevención y Reducción del Riesgo de Desastres (PPRRD).</strong>.",
                                             "negacion": "seleccionado <strong>NO CUENTA</strong> con su <strong>Plan de Prevención y Reducción del Riesgo de Desastres (PPRRD)</strong>."
                                         }
-                                    ]
+                                    ],
+                                    "cuenta_adicional": "Si los gobiernos locales del departamento o provincia seleccionado cuentan con planes PPRRD, se mostraran listados en la parte inferior."
                                 }
                             ]
                         }
@@ -201,7 +202,7 @@
             ]
         },
         { 
-            "name": "CARTOGRAFÍA DE RIESGOS",
+            "name": "RIESGOS",
             "srv": [
                 {
                     "name": "Evaluaciones de Riesgo",
@@ -396,7 +397,7 @@
             ]
         },
         {
-            "name": "CARTOGRAFÍA DE PELIGROS",
+            "name": "PELIGROS",
             "srv": [
                 {
                     "name": "Inundación",
@@ -797,8 +798,8 @@
                                     "version_08": [
                                         {
                                             "detalle": "Elementos expuestos (<strong>EE</strong>) en <strong>Áreas De Exposición</strong>.",
-                                            "nota": "Las <strong>Áreas De Exposición</strong> por movimientos en masa son aquellos ámbitos identificados como peligros geológicos: Deslizamientos, flujos, caída de rocas, reptación, propagación lateral y movimientos complejos, por diferentes entidades mediante informes y/o estudios.",
-                                            "fuente": "<strong>Fuente:</strong>",
+                                            "nota": "Las <strong>Áreas De Exposición</strong>, por movimientos en masa son aquellos ámbitos donde existe la probabilidad de ocurrencia de deslizamientos, flujos, caída de rocas, reptación, propagación lateral y movimientos complejos. Dichos ámbitos son identificados por las entidades técnico científicas con base en estudios territoriales de peligros.",
+                                            "fuente": "<strong>Fuente:</strong> Elaborado por el Cenepred con datos proporcionados por las entidades técnicas. Los datos obtenidos son el resultado de la cuantificación de los elementos expuestos dentro de los ámbitos de exposición a movimientos en masa. El geoproceso utilizado por el sistema es la intersección de las capas áreas de exposición a movimientos en masa y la base gráfica de manzanas referenciales (INEI, 2017); de igual forma para el caso de Otros EE. La data espacial de Áreas de Exposición tiene geometría tipo polígono.",
                                             "cuenta": [
                                                 {
                                                     "afirmacion": "seleccionado <strong>CUENTA</strong> con <strong style='font-size:28px;'>XX</strong> Áreas De Exposición por movimientos en masa. En la <strong>parte inferior</strong> puede <strong>acceder y descargar</strong> las Áreas De Exposición disponibles.",
