REPORTE. Se levanta las observaciones 5. PARTE 03 - 03

--- a/CENEPRED/Avance_03/json/config.json
+++ b/CENEPRED/Avance_03/json/config.json
@@ -1781,7 +1781,7 @@
                         }
                     ],
                     "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2100300",
-                    "table": "bdcenepred.elementos_expuestos.INEI_ManzanasReferenciales|PrediosUrbanosRurales"
+                    "table": "bdcenepred.elementos_expuestos.INEI_ManzanasReferenciales|ManzanasReferenciales2017"
                 }
             ]
         }
